@@ -3,7 +3,6 @@ package view.game;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Arrays;
 import java.util.EnumMap;
 import org.apache.commons.lang3.tuple.Pair;
 import constants.PlayerType;
@@ -12,6 +11,7 @@ import view.ConfirmBox;
 import view.MainMenu;
 import view.Style;
 import view.UnitViewType;
+import view.ViewFactory;
 import view.ViewResolution;
 import view.constants.ViewConstants;
 import view.sound.Music;
@@ -25,7 +25,6 @@ import javafx.scene.control.ToggleButton;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyEvent;
-import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
@@ -55,7 +54,7 @@ public final class GameViewImpl extends Region implements GameView {
     private static final double LEFT_RIGTH_MENU_H = ViewResolution.screenResolutionHeight(ViewConstants.DIVISOR_20);
     private static final double BORDERPANE_W = ViewResolution.screenResolutionWidth(ViewConstants.DIVISOR_1_3);
     private static final double BORDERPANE_H = ViewResolution.screenResolutionHeight(ViewConstants.DIVISOR_1_3);
-    private static final double PADDING_H = ViewResolution.screenResolutionHeight(ViewConstants.DIVISOR_60);
+    private static final double PADDING = ViewResolution.screenResolutionHeight(ViewConstants.DIVISOR_60);
 
     private final GameFieldView field;
     private final int laneNumber;
@@ -106,30 +105,6 @@ public final class GameViewImpl extends Region implements GameView {
         this.field = new GameFieldViewImpl(laneNumber, cellsNUmber, ground);
     }
 
-    /** Create the timer label from the given long number.
-     * @param l the quantity of seconds to display
-     * @return the label created
-     */
-    private Label unitTimerLabel(final long l) {
-        final Label respawnLabel = new Label(l + " sec");
-        respawnLabel.setPrefSize(RESPAWN_LABEL_W, RESPAWN_LABEL_H);
-        respawnLabel.setAlignment(Pos.CENTER);
-        respawnLabel.setStyle(Style.LABEL);
-        return respawnLabel;
-    }
-
-    /**
-     * Create the score label.
-     * @param player PlayerType
-     * */
-    private Label scorePlayerLabel(final PlayerType player) {
-        final Label scoreLabel = new Label("SCORE " + this.observer.getPlayerName(player) + ": 0");
-        scoreLabel.setPrefSize(LABEL_W, LABEL_H);
-        scoreLabel.setAlignment(Pos.CENTER);
-        scoreLabel.setStyle(Style.LABEL);
-        return scoreLabel;
-    }
-
     /**
      * Method to return on main menu with a confirm box.
      * @param actual pane
@@ -160,12 +135,12 @@ public final class GameViewImpl extends Region implements GameView {
             try {
                 Music.getMusic().playButtonSound();
                 Music.getMusic().play(Sounds.MENU);
-                pane.getChildren().setAll(scenaMenu.createPane());
+                this.pane.getChildren().setAll(scenaMenu.createPane());
             } catch (IOException e1) {
                 e1.printStackTrace();
             }
         } else {
-            final Stage stage = (Stage) pane.getScene().getWindow();
+            final Stage stage = (Stage) this.pane.getScene().getWindow();
             stage.close();
         }
     }
@@ -182,23 +157,20 @@ public final class GameViewImpl extends Region implements GameView {
         final ImageView gameBackGround = ViewResolution.createImageView(scenario, BORDERPANE_W, BORDERPANE_H);
 
         /*Lists of units logo used. */
-        this.unitImageP1 = new ArrayList<>(Arrays.asList(logoSwordsmenP1, logoSpearmenP1, logoArcherP1));
-        this.unitSelectedP1 = new ArrayList<>(Arrays.asList(selectedSwordsmenP1, selectedSpearmenP1, selectedArcherP1));
-        this.unitImageP2 = new ArrayList<>(Arrays.asList(logoSwordsmenP2, logoSpearmenP2, logoArcherP2));
-        this.unitSelectedP2 = new ArrayList<>(Arrays.asList(selectedSwordsmenP2, selectedSpearmenP2, selectedArcherP2));
+        this.unitImageP1 = List.of(logoSwordsmenP1, logoSpearmenP1, logoArcherP1);
+        this.unitSelectedP1 = List.of(selectedSwordsmenP1, selectedSpearmenP1, selectedArcherP1);
+        this.unitImageP2 = List.of(logoSwordsmenP2, logoSpearmenP2, logoArcherP2);
+        this.unitSelectedP2 = List.of(selectedSwordsmenP2, selectedSpearmenP2, selectedArcherP2);
 
         /*List of units player 1. */
         final ImageView unit1P1 = ViewResolution.createImageView(selectedSwordsmenP1, UNIT_ICON_WIDTH, UNIT_ICON_HEIGHT);
         final ImageView unit2P1 = ViewResolution.createImageView(logoSpearmenP1, UNIT_ICON_WIDTH, UNIT_ICON_HEIGHT);
-
         final ImageView unit3P1 = ViewResolution.createImageView(logoArcherP1, UNIT_ICON_WIDTH, UNIT_ICON_HEIGHT);
         listUnitP1.addAll(List.of(unit1P1, unit2P1, unit3P1));
 
         /*List of units player 2. */
         final ImageView unit1P2 = ViewResolution.createImageView(selectedSwordsmenP2, UNIT_ICON_WIDTH, UNIT_ICON_HEIGHT);
-
         final ImageView unit2P2 = ViewResolution.createImageView(logoSpearmenP2, UNIT_ICON_WIDTH, UNIT_ICON_HEIGHT);
-
         final ImageView unit3P2 = ViewResolution.createImageView(logoArcherP2, UNIT_ICON_WIDTH, UNIT_ICON_HEIGHT);
         listUnitP2.addAll(List.of(unit1P2, unit2P2, unit3P2));
 
@@ -218,27 +190,21 @@ public final class GameViewImpl extends Region implements GameView {
 
         /*Buttons. */
         /*Button EXIT. */
-        final Button exit = new Button("Exit");
-        exit.setMinSize(BUTTONS_W, BUTTONS_H);
+        final Button exit = ViewFactory.createButton("Exit", Style.BUTTON_1, BUTTONS_W, BUTTONS_H);
         exit.setOnMouseClicked(e -> {
             Music.getMusic().playButtonSound();
-            closeProgram(pane);
+            this.closeProgram(pane);
         });
-        exit.setStyle(Style.BUTTON_1);
 
         /*Button MENU. */
-        final Button menu = new Button("Menu");
-        menu.setStyle(Style.BUTTON_1);
-        menu.setPrefSize(BUTTONS_W, BUTTONS_H);
+        final Button menu = ViewFactory.createButton("Menu", Style.BUTTON_1, BUTTONS_W, BUTTONS_H);
         menu.setOnMouseClicked(e ->  {
             Music.getMusic().playButtonSound();
-            returnMainMenu(pane);
+            this.returnMainMenu(pane);
         });
 
         /*Button MUSIC. */
-        final ToggleButton stopMusic = new ToggleButton("Music On/Off");
-        stopMusic.setStyle(Style.BUTTON_1);
-        stopMusic.setPrefSize(BUTTONS_W, BUTTONS_H);
+        final ToggleButton stopMusic = ViewFactory.createToggleButton("Music On/Off", Style.BUTTON_1, BUTTONS_W, BUTTONS_H);
         stopMusic.setOnMouseClicked(e -> {
             Music.getMusic().playButtonSound();
             Music.getMusic().musicOnOff();
@@ -246,14 +212,13 @@ public final class GameViewImpl extends Region implements GameView {
 
         /*Labels. */
         /*Label TIMER. */
-        timer = new Label("TIMER");
-        timer.setStyle(Style.LABEL);
-        timer.setPrefSize(LABEL_W, LABEL_H);
-        timer.setAlignment(Pos.CENTER);
+        timer = ViewFactory.createLabel("TIMER", Style.LABEL, LABEL_W, LABEL_H);
 
         /*List of Labels for the respawn time of players units. */
         for (final var type : UnitViewType.values()) {
-            final Label label = this.unitTimerLabel(type.getWaitingTime());
+            final Label label = ViewFactory.createLabel(type.getWaitingTime() + " sec", Style.LABEL,
+                    RESPAWN_LABEL_W, RESPAWN_LABEL_H);
+            label.setTextFill(Color.RED);
             unitBoxes.put(type, label);
             if (type.getPlayer().equals(PlayerType.PLAYER1)) {
                 unit1ListLabel.add(label);
@@ -264,7 +229,8 @@ public final class GameViewImpl extends Region implements GameView {
 
         /*Settings for the player labels, with name and score of the player. */
         for (final var type : PlayerType.values()) {
-            final Label score = this.scorePlayerLabel(type);
+            final Label score = ViewFactory.createLabel("SCORE " + this.getPlayerName(type) + ": 0", Style.LABEL,
+                    LABEL_W, LABEL_H);
             labelsScore.put(type, score);
         }
 
@@ -285,34 +251,27 @@ public final class GameViewImpl extends Region implements GameView {
             vBoxplayer2.add(vBox2);
         }
 
-        final HBox topMenu = new HBox(TOPMENU_W);
-        topMenu.setAlignment(Pos.CENTER);
+        final HBox topMenu = ViewFactory.createHBox(TOPMENU_W, PADDING);
         topMenu.getChildren().addAll(vBoxplayer1);
         topMenu.getChildren().add(timer);
         topMenu.getChildren().addAll(vBoxplayer2);
-        topMenu.setPadding(new Insets(PADDING_H, 0, PADDING_H, 0));
 
-        final HBox bottomMenu = new HBox(BOTTOMMENU_W);
+        final HBox bottomMenu = ViewFactory.createHBox(BOTTOMMENU_W, PADDING);
         bottomMenu.getChildren().addAll(this.labelsScore.get(PlayerType.PLAYER1), menu, stopMusic, exit,
                 this.labelsScore.get(PlayerType.PLAYER2));
-        bottomMenu.setAlignment(Pos.CENTER);
-        bottomMenu.setPadding(new Insets(PADDING_H, 0, PADDING_H, 0));
 
-        final VBox leftMenu = new VBox(LEFT_RIGTH_MENU_H);
-        leftMenu.setAlignment(Pos.CENTER);
+        final VBox leftMenu = ViewFactory.createVBox(LEFT_RIGTH_MENU_H);
         leftMenu.getChildren().addAll(listArrowP1);
 
-        final VBox rightMenu = new VBox(LEFT_RIGTH_MENU_H);
-        rightMenu.setAlignment(Pos.CENTER);
+        final VBox rightMenu = ViewFactory.createVBox(LEFT_RIGTH_MENU_H);
         rightMenu.getChildren().addAll(listArrowP2);
 
         /*BorderPane. */
-        final BorderPane borderpane = new BorderPane();
+        final BorderPane borderpane = new BorderPane(this.field.getGrid());
         borderpane.setTop(topMenu);
         borderpane.setLeft(leftMenu);
         borderpane.setBottom(bottomMenu);
         borderpane.setRight(rightMenu);
-        borderpane.setCenter(this.field.getGrid());
         borderpane.setPrefSize(BORDERPANE_W, BORDERPANE_H);
 
         /*KeyInput. */
@@ -352,16 +311,14 @@ public final class GameViewImpl extends Region implements GameView {
                 break;
             }
         });
-
-        pane.getChildren().add(gameBackGround);
-        pane.getChildren().add(borderpane);
+        pane.getChildren().addAll(List.of(gameBackGround, borderpane));
 
         return pane;
     }
 
     @Override
     public void updateSelectLane(final PlayerType player, final int index, final int next) {
-        final List<ImageView> tempList = player.equals(PlayerType.PLAYER1) ? new ArrayList<>(listArrowP1) : new ArrayList<>(listArrowP2);
+        final List<ImageView> tempList = new ArrayList<>(player.equals(PlayerType.PLAYER1) ? listArrowP1 : listArrowP2);
         tempList.get(index).setImage(arrowP1);
         tempList.get(next).setImage(selectedArrowP1);
         if (player.equals(PlayerType.PLAYER1)) {
